# Project-MyOS-GUI

./: CMakeLists.txt  index.html
docs/: gui-requirements.md
src/: app.js  main.cpp  styles.css
